added unit tests for workers and api's
